--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,26 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
+    id "org.asciidoctor.jvm.convert" version "3.3.2"
+    id "com.epages.restdocs-api-spec" version "0.18.2"
 }
 
 group = 'com'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = JavaVersion.VERSION_17
+}
+
+ext {
+    set("snippetsDir", file("build/generated-snippets"))
 }
 
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    asciidoctorExt
 }
 
 repositories {
@@ -22,16 +29,74 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    //springboot
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+    //data
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+    //lombok
+    compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+
+    //test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //restdocs
+    asciidoctorExt("org.springframework.restdocs:spring-restdocs-asciidoctor")
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    testImplementation("com.epages:restdocs-api-spec-mockmvc:0.18.2")
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+jar.enabled = false
+
+// asciidoctor start
+asciidoctor {
+    inputs.dir snippetsDir
+    configurations 'asciidoctorExt'
+    sources {
+        include("**/index.adoc")
+    }
+    baseDirFollowsSourceFile()
+    dependsOn test
+}
+
+asciidoctor.doFirst {
+    delete file("src/main/resources/static/docs")
+}
+// asciidoctor end
+
+openapi3 {
+    servers = [
+            { url = 'http://localhost:8080' },
+    ]
+    title = 'Project title'
+    description = 'Project description'
+    version = "${project.version}"
+    format = 'yaml'
+}
+
+tasks.register('copyOasToSwagger', Copy) {
+    dependsOn("openapi3"); // openapi3 Task가 먼저 실행되도록 설정
+    delete("src/main/resources/static/swagger-ui/openapi3.yaml"); // 기존 OAS 파일 삭제
+    from("build/api-spec/openapi3.yaml"); // 복제할 OAS 파일 지정
+    into("src/main/resources/static/swagger-ui/."); // 타겟 디렉터리로 파일 복제
+}
+
+bootJar {
+    dependsOn asciidoctor
+    copy {
+        from asciidoctor.outputDir
+        into "src/main/resources/static/docs"
+    }
+    archiveFileName.set "app.jar"
 }
