--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,22 @@
+# Springboot configurations
+spring.profiles.default: local
 
+spring.datasource:
+  url: jdbc:mariadb://localhost:3306/pcmk
+  driver-class-name: org.mariadb.jdbc.Driver
+  username: root
+  password: 1234
+
+spring.jpa:
+  open-in-view: false
+
+---
+spring.config.activate.on-profile: local
+
+spring.jpa:
+  hibernate:
+    ddl-auto: create
+  show-sql: true
+  properties:
+    hibernate:
+      format_sql: true
